# x-feed

./: .env  Cargo.toml  Dockerfile  README.md  compose.yml
cockroach/: .env  Dockerfile  setup-db.sh
entity/: Cargo.toml
entity/src/: lib.rs  message.rs  prelude.rs
messaging/: Cargo.toml
messaging/src/: lib.rs  message_producer.rs
migration/src/: lib.rs  m20240628_180333_create_message_table.rs
model/: Cargo.toml
persistance/: Cargo.toml
persistance/src/: database.rs
src/: main.rs
src/api/: main.rs
src/api/app/: builder.rs  message.rs  mod.rs
src/app/: builder.rs  message.rs  mod.rs
src/back_pressure/: main.rs
src/model/: message.rs
src/spam_bot/: main.rs
