[package]
name = "x-feed"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity", "persistance", "model"]

[[bin]]
name = "back-pressure"
path = "src/back_pressure/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "spam-bot"
path = "src/spam_bot/main.rs"


[dependencies]
migration = { path = "migration" }
persistance = { path = "persistance" }
messaging = { path = "messaging" }
model = { path = "model" }
actix-web = "4.8.0"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
futures = "0.3.30"
serde_json = "1.0.118"
bytes = "1.6.0"
kafka = "0.10.0"
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
fake = { version = "2.9.2", features = ["derive"] }
rand = "0.8.5"
env_logger = "0.11.3"
